--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,29 +7,31 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textViewTemp"
-        android:layout_width="160dp"
-        android:layout_height="39dp"
-        android:layout_marginEnd="40dp"
-        android:fontFamily="sans-serif-medium"
-        android:password="false"
-        android:text="temp"
-        android:textAlignment="center"
+        android:id="@+id/textViewMinTemperature"
+        android:layout_width="102dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="59dp"
+        android:fontFamily="@font/acme"
+        android:gravity="center|left"
+        android:text="0"
+        android:textColor="@color/black"
         android:textSize="30sp"
-        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="48dp" />
+        app:layout_constraintTop_toTopOf="@+id/textViewTemp" />
 
-    <ImageView
-        android:id="@+id/Icon"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="38dp"
-        app:layout_constraintEnd_toStartOf="@+id/textViewTemp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_launcher_foreground"
-        tools:layout_editor_absoluteY="16dp" />
+    <TextView
+        android:id="@+id/textMinTemperature"
+        android:layout_width="145dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/acme"
+        android:text="@string/minTemperature"
+        android:textColor="@color/blue_darken_1"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMinTemperature" />
 
     <Button
         android:id="@+id/btnUpdate"
@@ -38,8 +40,117 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:text="Обновить"
+        android:fontFamily="@font/bungee"
+        android:text="@string/update_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/Icon"
+        android:layout_width="180dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewTemp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
+
+    <TextView
+        android:id="@+id/textViewTemp"
+        android:layout_width="179dp"
+        android:layout_height="91dp"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/bungee"
+        android:gravity="center_horizontal|top"
+        android:password="false"
+        android:text="0 °C"
+        android:textColor="@color/blue_darken_1"
+        android:textSize="50sp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Icon" />
+
+    <TextView
+        android:id="@+id/textViewMaxTemperature"
+        android:layout_width="102dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="140dp"
+        android:fontFamily="@font/acme"
+        android:gravity="center|left"
+        android:text="0"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textViewTemp" />
+
+    <TextView
+        android:id="@+id/textMaxTemperature"
+        android:layout_width="145dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/acme"
+        android:text="@string/maxTemperature"
+        android:textColor="@color/blue_darken_1"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMaxTemperature" />
+
+    <TextView
+        android:id="@+id/textWindSpeed"
+        android:layout_width="145dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="16dp"
+        android:fontFamily="@font/acme"
+        android:text="@string/windSpeed"
+        android:textColor="@color/blue_darken_1"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewWindSpeed" />
+
+    <TextView
+        android:id="@+id/textViewWindSpeed"
+        android:layout_width="102dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="252dp"
+        android:fontFamily="@font/acme"
+        android:gravity="center|left"
+        android:text="0"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textViewTemp" />
+
+    <TextView
+        android:id="@+id/textViewWindDeg"
+        android:layout_width="102dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="252dp"
+        android:layout_marginEnd="61dp"
+        android:fontFamily="@font/acme"
+        android:gravity="center|left"
+        android:text="0"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textViewTemp" />
+
+    <TextView
+        android:id="@+id/textWindDeg"
+        android:layout_width="145dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="18dp"
+        android:fontFamily="@font/acme"
+        android:text="@string/windDeg"
+        android:textColor="@color/blue_darken_1"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewWindDeg" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
